--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                 <div class="typing-text">I am into Data Analytics</div>
             </div>
             <p class="hero-description">
-                A passionate learner who transforms data into insights. I focus on solving real-world problems using analytics, machine learning, and data visualization tools. I'm also a strong communicator and a confident team leader.
+                A passionate learner who transforms data into insights. I focus on solving real-world problems using analytics, machine learning, and data visualization tools. 
             </p>
             <a href="#about" class="cta-button">About Me</a>
         </div>
