--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
                     <div class="contact-icon"><i class="fab fa-linkedin"></i></div>
                     <div class="contact-title">LinkedIn</div>
                     <div class="contact-info">
-                        <a href="linkedin.com/in/vyshnavee-eswaramurthi" target="_blank">Connect with me</a>
+                        <a href="www.linkedin.com/in/vyshnavee-eswaramurthi" target="_blank">Connect with me</a>
                     </div>
                 </div>
                 <div class="contact-card">
@@ -1255,3 +1255,4 @@
 </script>
 </body>
 </html>
+
